# ogentic-shield

./: .gitignore  BUILD_PLAN.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  PRD.md  PYPI_README.md  README.md  RELEASING.md  ogentic-shield.yaml  pyproject.toml
.claude/: CLAUDE-FACTORY.md  LINEAR-INTEGRATION.md  SKILLS.md  _factory-manifest.yml
.claude/agents/: 01-researcher.md  02-story-writer.md  03-spec-writer.md  04a-backend-builder-python.md  04b-backend-builder-typescript.md  05-frontend-builder.md  06-test-verifier.md  07-validator.md  08-ai-eval-engineer.md  09-security-reviewer.md  10-release-manager.md  11-cross-repo-coordinator.md  12-incident-responder.md  13-library-publisher.md  14-rust-builder.md  15-compliance-reviewer.md  16-backlog-groomer.md  16-design-architect.md  17-design-fidelity-checker.md  18-deploy-fitness-reviewer.md  19-monorepo-consistency-reviewer.md
.claude/hooks/: pre-commit  pre-push
.claude/hooks/tests/: test-pre-commit.sh
.claude/scripts/: factory-linear-comment.sh  factory-linear-query.sh
.claude/skills/build-with-tests/: SKILL.md
.claude/skills/feature-factory/: SKILL.md
.claude/skills/fleet-onboarding/: SKILL.md
.claude/skills/multi-repo-coordinator/: SKILL.md
.claude/skills/new-from-knowledge/: SKILL.md
.claude/skills/project-factory/: SKILL.md
.claude/skills/project-planner/: SKILL.md
.claude/skills/repo-bootstrap/: SKILL.md
.claude/skills/repo-create/: SKILL.md
.claude/skills/setup-check/: SKILL.md
.github/workflows/: ci.yml  ogenticai-reviewer.yml  release.yml  uat-override.yml
benchmarks/: MOE_COMPARISON.md  MOE_COMPARISON.results.json  README.md  finance_mnpi.jsonl  fit_calibration.py  generate_eval_corpus.py  legal_privilege.jsonl  run_benchmarks.py  run_layer3_benchmark.py  run_moe_comparison.py  therapy_phi.jsonl  therapy_phi_pro.jsonl
benchmarks/bakeoff/: __init__.py  eval_finetuned.py  prepare_finetune_data.py  run_fireworks_finetune.py  run_together_finetune.py
deploy/: Dockerfile  README.md  app.py  railway.json  requirements.txt
docs/: CORPUS-REMEDIATION.md  PROVENANCE.md  TELEMETRY-POLICY.md  VERTICAL-EXPERT-FEEDBACK.md
docs/adr/: ADR-003-layer3-fine-tuning-platform.md
docs/throwaway/: oge-366-live-test.md
examples/: basic_usage.py  custom_profile.py  gdpr_recognizer.py  multi_profile.py  recognizer_template.py
mcpb/: .mcpbignore  README.md  manifest.json  pyproject.toml
mcpb/src/: server.py
scripts/: pack-mcpb.sh
smoke/: smoke.py
src/ogentic_shield/: __init__.py  _version.py  async_shield.py  audit.py  calibration.py  config.py  documents.py  models.py  pipeline.py  redaction.py  registry.py  scoring.py  shield.py
src/ogentic_shield/cli/: __init__.py  analyze.py  formatters.py  main.py  profiles_cmd.py  serve.py  test_recognizer.py
src/ogentic_shield/data/: __init__.py  calibration.json
src/ogentic_shield/layers/: __init__.py  llm.py  llm_client.py  llm_prompts.py  llm_schema.py  regex_ner.py  rules.py
src/ogentic_shield/mcp/: __init__.py  __main__.py  server.py
src/ogentic_shield/profiles/: __init__.py  base.py  finance.py  legal.py  therapy.py  therapy_pro.py
src/ogentic_shield/recognizers/: __init__.py  base.py  finance.py  legal.py  therapy.py  therapy_pro.py
tests/: conftest.py  test_async_shield.py  test_audit.py  test_batch.py  test_calibration.py  test_classify_batch.py  test_documents.py  test_ner_model_config.py  test_redaction.py  test_registry.py  test_scoring.py  test_shield.py  test_version.py
tests/benchmarks/: test_generate_eval_corpus.py  test_prepare_finetune_data.py
tests/cli/: test_cli.py  test_test_recognizer.py
tests/fixtures/documents/: legal_memo.txt  wellness_blog.md
tests/integration/: test_llm_ollama.py
tests/layers/: test_llm.py  test_rules.py
tests/mcp/: test_server.py
tests/recognizers/: test_finance.py  test_legal.py  test_therapy.py  test_therapy_pro.py
