[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ogentic-shield"
version = "0.4.0"
description = "Regulatory sensitivity detection for legal privilege, clinical PHI, and financial MNPI"
readme = "PYPI_README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "David Oladeji", email = "david@ogentic.ai" },
]
keywords = ["privacy", "pii", "hipaa", "privilege", "mnpi", "presidio", "compliance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
    "pyyaml>=6.0",
    "click>=8.0",
    "rich>=13.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
server = ["fastapi>=0.100", "uvicorn>=0.20"]
mcp = ["mcp>=1.0"]
llm = ["ollama>=0.4"]
# OGE-398: document analysis (PDF / DOCX / XLSX / EML / MSG / HTML).
# Phase 1 implementation handles only the plain-text family (.txt, .md,
# .log) without needing any of these — they're declared here so the
# Phase 2 work can lazy-import them without changing the install story.
documents = [
    "pdfplumber>=0.11",
    "python-docx>=1.1",
    "openpyxl>=3.1",
    "extract-msg>=0.50",
    "trafilatura>=1.12",
    "python-magic>=0.4",
]
all = ["ogentic-shield[server,mcp,llm,documents]"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "pytest-asyncio>=0.23", "ruff>=0.4", "mypy>=1.13"]

[project.scripts]
ogentic-shield = "ogentic_shield.cli.main:cli"

[project.urls]
Homepage      = "https://github.com/OgenticAI/ogentic-shield"
Repository    = "https://github.com/OgenticAI/ogentic-shield"
Issues        = "https://github.com/OgenticAI/ogentic-shield/issues"
Changelog     = "https://github.com/OgenticAI/ogentic-shield/blob/main/CHANGELOG.md"
Documentation = "https://github.com/OgenticAI/ogentic-shield#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/ogentic_shield"]

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
# Few-shot example JSON inside triple-quoted prompt strings — splitting the
# lines would change what the model sees, which would invalidate the v0.2
# precision benchmarks.
"src/ogentic_shield/layers/llm_prompts.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

# mypy `python_version` controls the syntax mypy will *parse* across ALL files
# it loads (including stubs from site-packages). numpy 2.x stubs use PEP 695
# `type X = ...` statements; mypy refuses to parse these when python_version
# is 3.10 or 3.11. Bumping to 3.12 makes mypy accept the stubs.
#
# This is a TYPECHECK-time setting only. Shield's runtime support stays at
# `requires-python = ">=3.10"` per [project] above — bumping mypy's target
# doesn't change what Python versions can install + run shield. Shield's own
# code never uses 3.12-only syntax, so there's no behavioural cost.
#
# Refs OGE-1029.
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
